# senserve

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.l40  README.md  compose.dgx.yaml  compose.l40.yaml  compose.yaml  pyproject.toml  skills-lock.json
.agents/skills/keep/: SKILL.md
.agents/skills/keep/references/: brownfield.md  setup.md  (+2 more)
.cursor/rules/: zen-of-python.mdc
config/: models.local.toml.example  models.local.yaml.example  models.toml  models.yaml
docs/: dgx-vllm.md
knowledge/: INDEX.md
knowledge/docs/decisions/: ADR-0001-single-llm-deployment.md  ADR-0002-vllm-worker-no-ray.md  ADR-0003-vllm-sleep-mode-pool.md
knowledge/ideas/: IDEA-2026-06-03-active-model-vllm-reload.md  IDEA-2026-06-03-admin-config-auth.md  IDEA-2026-06-03-yaml-roundtrip-comments.md
scripts/: infer_dataset_videos.py  run_gateway.py  verify_vllm_sleep.py
src/senserve/: __init__.py  catalog_config.py  cli.py  engine.py  registry.py  settings.py  vllm_flags.py  vllm_sleep.py
src/senserve/gateway/: admin_routes.py  app.py  errors.py  middleware.py  openai_routes.py
src/senserve/preprocessors/: __init__.py  base.py  gemma4.py  media_utils.py  none.py  qwen_vl.py
tests/: conftest.py  test_admin_config.py  test_cli_startup.py  test_engine.py  test_engine_reload.py  test_engine_sleep.py  test_engine_switch.py  test_gateway_switch.py  test_preprocessors.py  test_registry.py  test_ui_static.py  test_vllm_flags.py  test_vllm_sleep.py
tests/fixtures/: models.toml  models.yaml
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css
(+21 files in other folders)
