[project]
name = "senserve"
version = "0.2.0"
description = "Multimodal OpenAI gateway over vLLM (no Ray)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.21"]

[project.scripts]
senserve = "senserve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/senserve"]

[tool.hatch.build.targets.wheel.force-include]
"src/senserve/gateway/static" = "senserve/gateway/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
